--- a/index.html
+++ b/index.html
@@ -4,69 +4,55 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Marc Wanjeru — IT Systems & Cybersecurity Specialist | Kampala</title>
-  <meta name="description" content="Marc Wanjeru — Experienced IT Systems Administrator and Cybersecurity Specialist in Kampala, Uganda. Microsoft 365, Kaspersky, Sophos, network security & infrastructure expert."/>
+  <meta name="description" content="Marc Wanjeru — IT Systems & Cybersecurity Specialist in Kampala, Uganda. Expert in Microsoft 365, Kaspersky, Sophos, network infrastructure & endpoint security."/>
 
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🛡️</text></svg>">
 
-  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet"/>
-  <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
-
   <style>
     :root {
-      --bg:          #0a1117;
-      --surface:     #111b22;
-      --glass:       rgba(20, 35, 50, 0.72);
-      --glass-border:rgba(255,255,255,0.09);
-      --blur:        blur(16px);
-      --text:        #e2e8f0;
-      --text-muted:  #94a3b8;
-      --accent:      #00d4c0;
-      --accent-dark: #00a894;
-      --card-bg:     rgba(25, 40, 55, 0.68);
-      --shadow:      0 12px 40px rgba(0,0,0,0.6);
-      --radius:      16px;
+      --bg: #0a1117;
+      --surface: #111b22;
+      --glass: rgba(20, 35, 50, 0.72);
+      --border: rgba(255,255,255,0.09);
+      --blur: blur(16px);
+      --text: #e2e8f0;
+      --muted: #94a3b8;
+      --accent: #00d4c0;
+      --accent-glow: rgba(0,212,192,0.18);
+      --shadow: 0 12px 40px rgba(0,0,0,0.6);
+      --radius: 16px;
     }
 
-    * {
-      margin:0; padding:0; box-sizing:border-box;
-    }
-
+    * { margin:0; padding:0; box-sizing:border-box; }
     body {
       font-family: system-ui, sans-serif;
       background: var(--bg);
       color: var(--text);
-      min-height: 100vh;
       line-height: 1.6;
+      min-height: 100vh;
       overflow-x: hidden;
     }
 
-    /* ── Navbar ── */
-    .nav-container {
+    /* Navbar (kept simple & matching your previous style) */
+    .nav {
       position: fixed;
       top: 16px; left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
       width: 94%; max-width: 1240px;
-      transition: all 0.4s ease;
-    }
-
-    .nav-container.scrolled {
-      top: 8px;
-      width: 90%; max-width: 1180px;
-    }
-
-    nav {
       height: 68px;
       background: var(--glass);
       backdrop-filter: var(--blur);
-      border: 1px solid var(--glass-border);
+      border: 1px solid var(--border);
       border-radius: 999px;
       box-shadow: var(--shadow);
       display: flex;
       align-items: center;
       padding: 0 24px;
-      gap: 16px;
+      transition: all 0.4s;
     }
+
+    .nav.scrolled { top: 8px; width: 90%; max-width: 1180px; }
 
     .nav-links {
       display: flex;
@@ -81,12 +67,11 @@
       padding: 10px 20px;
       border-radius: 999px;
       font-size: 15px;
-      font-weight: 500;
       transition: all 0.3s;
     }
 
     .nav-links a:hover {
-      background: rgba(0,212,192,0.14);
+      background: var(--accent-glow);
       color: var(--accent);
     }
 
@@ -97,354 +82,109 @@
       padding: 10px 28px;
       border-radius: 999px;
       text-decoration: none;
-      transition: all 0.3s;
     }
 
-    .nav-cta:hover {
-      background: var(--accent-dark);
-      transform: translateY(-1px);
-    }
+    .nav-cta:hover { background: #00a894; }
 
-    /* ── Hero ── */
-    #home {
-      height: 100vh;
-      min-height: 720px;
-      background: linear-gradient(rgba(10,20,26,0.82), rgba(10,20,26,0.88)),
-                  url('desktop.jpg') center/cover no-repeat fixed;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      text-align: center;
-    }
-
-    .hero-box {
-      max-width: 960px;
-      padding: 48px 32px;
-      background: rgba(15,30,45,0.62);
-      backdrop-filter: blur(16px);
-      border-radius: 28px;
-      border: 1px solid rgba(255,255,255,0.07);
-      box-shadow: 0 24px 64px rgba(0,0,0,0.6);
-    }
-
-    .hero-box h1:first-child { font-size: 3.8rem; margin-bottom: 0.4rem; font-weight: 800; }
-    .hero-box h1:last-child  { font-size: 5.4rem; line-height: 0.95; margin: 0.3rem 0 1.5rem; font-weight: 900; }
-    .hero-box h1 span { color: var(--accent); }
-    .hero-box p { font-size: 1.55rem; opacity: 0.92; margin-bottom: 2.8rem; }
-
-    .hero-buttons {
-      display: flex;
-      gap: 1.6rem;
-      justify-content: center;
-      flex-wrap: wrap;
-    }
-
-    .btn {
-      padding: 16px 48px;
-      font-size: 1.15rem;
-      font-weight: 600;
-      border-radius: 999px;
-      text-decoration: none;
-      transition: all 0.3s ease;
-    }
-
-    .btn-primary { background: var(--accent); color: #000; }
-    .btn-primary:hover { background: var(--accent-dark); transform: translateY(-3px); box-shadow: 0 12px 32px rgba(0,201,177,0.35); }
-    .btn-outline { background: transparent; border: 2px solid white; color: white; }
-    .btn-outline:hover { background: rgba(255,255,255,0.12); transform: translateY(-3px); }
-
-    /* ── Sections ── */
-    section { padding: 140px 5% 100px; max-width: 1400px; margin: 0 auto; }
-    h2 { font-size: 3.2rem; text-align: center; color: var(--accent); margin-bottom: 3.5rem; font-weight: 700; }
-
-    .card-grid {
-      display: flex;
-      overflow-x: auto;
-      gap: 32px;
-      padding: 12px 0;
-      scroll-snap-type: x mandatory;
-      -webkit-overflow-scrolling: touch;
-      scrollbar-width: none;
-    }
-
-    .card-grid::-webkit-scrollbar { display: none; }
-
-    .card {
-      flex: 0 0 360px;
-      scroll-snap-align: start;
-      background: var(--glass);
-      backdrop-filter: var(--blur);
-      border: 1px solid var(--glass-border);
-      border-radius: 20px;
-      padding: 32px;
-      box-shadow: var(--shadow);
-      transition: transform 0.4s;
-    }
-
-    .card:hover { transform: translateY(-12px); }
-
-    /* ── Contact Section – Neumorphic / Glassmorphic design ── */
-    #contact {
+    /* ── About Section ── */
+    #about {
+      padding: 140px 5% 100px;
+      max-width: 1400px;
+      margin: 0 auto;
       position: relative;
-      overflow: hidden;
     }
 
-    #contact::before {
-      content: "CONTACT";
-      position: absolute;
-      top: 50%; left: 50%;
-      transform: translate(-50%, -50%);
-      font-size: 18rem;
-      font-weight: 900;
-      color: rgba(0,212,192,0.04);
-      pointer-events: none;
-      user-select: none;
-      z-index: -1;
-      white-space: nowrap;
+    #about h2 {
+      font-size: 3.6rem;
+      text-align: center;
+      color: var(--accent);
+      margin-bottom: 4rem;
+      font-weight: 700;
+      letter-spacing: -1px;
     }
 
-    .contact-wrapper {
+    .about-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 80px;
-      max-width: 1200px;
+      align-items: center;
+    }
+
+    /* Left: Circular framed image with tech overlay */
+    .about-image-wrapper {
+      position: relative;
+      width: 100%;
+      max-width: 460px;
       margin: 0 auto;
     }
 
-    .contact-left {
-      display: flex;
-      flex-direction: column;
-      gap: 32px;
-    }
-
-    .contact-toggle {
-      width: 48px;
-      height: 48px;
-      background: var(--accent);
+    .about-image-circle {
+      width: 100%;
+      aspect-ratio: 1 / 1;
       border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.4rem;
-      color: #000;
-      box-shadow: inset 0 2px 8px rgba(0,0,0,0.4), 0 4px 16px rgba(0,212,192,0.35);
-      align-self: flex-start;
+      overflow: hidden;
+      border: 3px solid rgba(0,212,192,0.3);
+      box-shadow: 0 0 40px rgba(0,212,192,0.25),
+                  inset 0 0 30px rgba(0,212,192,0.15);
+      background: radial-gradient(circle at 30% 30%, rgba(0,212,192,0.12), transparent 60%);
     }
 
-    .contact-left h2 {
-      font-size: 3.6rem;
-      text-align: left;
-      margin-bottom: 1rem;
-    }
-
-    .contact-left p {
-      font-size: 1.25rem;
-      opacity: 0.9;
-      max-width: 480px;
-    }
-
-    .contact-cards {
-      display: flex;
-      flex-direction: column;
-      gap: 20px;
-    }
-
-    .contact-card {
-      background: var(--card-bg);
-      backdrop-filter: var(--blur);
-      border: 1px solid var(--glass-border);
-      border-radius: var(--radius);
-      padding: 24px;
-      display: flex;
-      align-items: center;
-      gap: 20px;
-      box-shadow: inset 0 2px 8px rgba(0,0,0,0.3), 0 8px 24px rgba(0,0,0,0.4);
-      transition: all 0.3s ease;
-    }
-
-    .contact-card:hover {
-      transform: translateY(-4px);
-      box-shadow: inset 0 2px 12px rgba(0,0,0,0.35), 0 16px 40px rgba(0,0,0,0.5);
-    }
-
-    .contact-icon {
-      width: 56px;
-      height: 56px;
-      background: rgba(0,212,192,0.15);
-      border-radius: 12px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 1.8rem;
-      color: var(--accent);
-    }
-
-    .contact-info {
-      flex: 1;
-    }
-
-    .contact-info strong {
-      display: block;
-      font-size: 1.15rem;
-      margin-bottom: 0.3rem;
-    }
-
-    .contact-info a {
-      color: var(--text);
-      text-decoration: none;
-      transition: color 0.3s;
-    }
-
-    .contact-info a:hover {
-      color: var(--accent);
-    }
-
-    .arrow {
-      font-size: 1.4rem;
-      color: var(--text-muted);
-      transition: all 0.3s;
-    }
-
-    .contact-card:hover .arrow {
-      color: var(--accent);
-      transform: translateX(6px);
-    }
-
-    /* Right side – Form */
-    .contact-form {
-      background: var(--card-bg);
-      backdrop-filter: var(--blur);
-      border: 1px solid var(--glass-border);
-      border-radius: var(--radius);
-      padding: 40px;
-      box-shadow: inset 0 2px 12px rgba(0,0,0,0.35), 0 16px 48px rgba(0,0,0,0.5);
-    }
-
-    .contact-form label {
-      display: block;
-      margin-bottom: 0.6rem;
-      font-size: 0.95rem;
-      color: var(--text-light);
-    }
-
-    .contact-form input,
-    .contact-form textarea {
+    .about-image {
       width: 100%;
-      padding: 14px 18px;
-      margin-bottom: 1.5rem;
-      background: rgba(255,255,255,0.04);
-      border: 1px solid rgba(255,255,255,0.12);
-      border-radius: 12px;
+      height: 100%;
+      object-fit: cover;
+      display: block;
+    }
+
+    /* Floating tech infographic overlay */
+    .tech-overlay {
+      position: absolute;
+      inset: -20%;
+      pointer-events: none;
+      opacity: 0.25;
+      background: 
+        radial-gradient(circle at 20% 30%, var(--accent) 1px, transparent 2px),
+        radial-gradient(circle at 80% 70%, var(--accent) 1px, transparent 2px),
+        linear-gradient(45deg, transparent 45%, rgba(0,212,192,0.08) 50%, transparent 55%),
+        linear-gradient(-45deg, transparent 45%, rgba(0,212,192,0.06) 50%, transparent 55%);
+      background-size: 40px 40px, 40px 40px, 100% 100%, 100% 100%;
+      animation: floatTech 25s infinite linear;
+    }
+
+    @keyframes floatTech {
+      0%   { transform: translate(0, 0) rotate(0deg); }
+      50%  { transform: translate(8px, -12px) rotate(3deg); }
+      100% { transform: translate(0, 0) rotate(0deg); }
+    }
+
+    /* Right: Text content */
+    .about-text {
+      font-size: 1.18rem;
+      color: var(--muted);
+      max-width: 580px;
+    }
+
+    .about-text strong {
       color: var(--text);
-      font-size: 1.05rem;
-      transition: all 0.3s;
-    }
-
-    .contact-form input:focus,
-    .contact-form textarea:focus {
-      outline: none;
-      border-color: var(--accent);
-      box-shadow: 0 0 0 3px rgba(0,212,192,0.15);
-    }
-
-    .contact-form textarea {
-      min-height: 160px;
-      resize: vertical;
-    }
-
-    .contact-form button {
-      width: 100%;
-      padding: 18px;
-      background: var(--accent);
-      color: #000;
-      font-size: 1.15rem;
       font-weight: 600;
-      border: none;
-      border-radius: 999px;
-      cursor: pointer;
-      transition: all 0.3s;
     }
 
-    .contact-form button:hover {
-      background: var(--accent-dark);
-      transform: translateY(-2px);
-      box-shadow: 0 12px 32px rgba(0,201,177,0.35);
+    .about-text p {
+      margin-bottom: 1.6rem;
     }
 
-    /* ── Footer ── */
-    footer {
-      background: var(--footer-bg);
-      padding: 80px 5% 40px;
-      color: var(--text-light);
-      border-top: 1px solid var(--border);
-    }
-
-    .footer-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 60px 40px;
-      max-width: 1400px;
-      margin: 0 auto;
-    }
-
-    .footer-brand h3 {
-      color: var(--accent);
-      font-size: 1.9rem;
-      margin-bottom: 1rem;
-    }
-
-    .footer-column h4 {
-      color: white;
-      margin-bottom: 1.2rem;
-      font-size: 1.25rem;
-    }
-
-    .footer-column a {
-      color: var(--text-light);
-      text-decoration: none;
-      display: block;
-      margin-bottom: 0.6rem;
-      transition: color 0.3s;
-    }
-
-    .footer-column a:hover { color: var(--accent); }
-
-    .copyright {
-      text-align: center;
-      margin-top: 60px;
-      padding-top: 40px;
-      border-top: 1px solid var(--border);
-      font-size: 0.95rem;
-    }
-
-    /* WhatsApp */
-    .whatsapp {
-      position: fixed;
-      bottom: 32px;
-      right: 32px;
-      background: #25D366;
-      color: white;
-      width: 68px;
-      height: 68px;
-      border-radius: 50%;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      font-size: 2.4rem;
-      box-shadow: 0 12px 36px rgba(0,0,0,0.5);
-      z-index: 999;
-      transition: transform 0.3s;
-    }
-
-    .whatsapp:hover { transform: scale(1.15); }
-
+    /* Responsive */
     @media (max-width: 960px) {
-      .contact-wrapper { grid-template-columns: 1fr; }
-      .hero-box h1:last-child { font-size: 4.4rem; }
+      .about-container {
+        grid-template-columns: 1fr;
+        text-align: center;
+      }
+      .about-image-wrapper { max-width: 380px; }
+      .about-text { max-width: 100%; }
     }
 
     @media (max-width: 640px) {
-      .card { flex: 0 0 300px; }
+      #about h2 { font-size: 2.8rem; }
     }
   </style>
 </head>
@@ -452,45 +192,60 @@
 
 <!-- Navigation -->
 <div class="nav-container" id="nav">
-  <nav>
+  <nav class="nav">
     <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#about">About</a>
       <a href="#journey">Journey</a>
       <a href="#services">Services</a>
       <a href="#projects">Projects</a>
-      <a href="#stories">Stories</a>
-      <a href="#technologies">Technologies</a>
       <a href="#contact">Contact</a>
     </div>
     <a href="#contact" class="nav-cta">Get in Touch →</a>
   </nav>
 </div>
 
-<!-- Hero -->
-<section id="home">
-  <div class="hero-box">
-    <h1>Hi There!</h1>
-    <h1>I am Marc <span>Wanjeru</span></h1>
-    <p class="tagline">I make complex IT systems simple & secure.</p>
-    <div class="hero-buttons">
-      <a href="#contact" class="btn btn-primary">Contact Me</a>
-      <a href="#" class="btn btn-outline" download>Download CV</a>
+<!-- Hero (kept simple from your previous versions) -->
+<section id="home" style="height:100vh; background:linear-gradient(rgba(10,20,26,0.82),rgba(10,20,26,0.88)), url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover fixed; display:flex; align-items:center; justify-content:center; text-align:center;">
+  <div style="max-width:960px; padding:48px 32px; background:rgba(15,30,45,0.62); backdrop-filter:blur(16px); border-radius:28px; border:1px solid rgba(255,255,255,0.07); box-shadow:0 24px 64px rgba(0,0,0,0.6);">
+    <h1 style="font-size:3.8rem; margin-bottom:0.4rem; font-weight:800;">Hi There!</h1>
+    <h1 style="font-size:5.4rem; line-height:0.95; margin:0.3rem 0 1.5rem; font-weight:900;">I am Marc <span style="color:#00d4c0;">Wanjeru</span></h1>
+    <p style="font-size:1.55rem; opacity:0.92; margin-bottom:2.8rem;">I make complex IT systems simple & secure.</p>
+    <div style="display:flex; gap:1.6rem; justify-content:center; flex-wrap:wrap;">
+      <a href="#contact" style="padding:16px 48px; font-size:1.15rem; font-weight:600; border-radius:999px; background:#00d4c0; color:#000; text-decoration:none;">Contact Me</a>
+      <a href="#" download style="padding:16px 48px; font-size:1.15rem; font-weight:600; border-radius:999px; border:2px solid white; color:white; text-decoration:none;">Download CV</a>
     </div>
   </div>
 </section>
 
-<!-- About -->
+<!-- About Me – updated layout -->
 <section id="about">
   <h2>About Me</h2>
-  <div class="content">
-    <div>
-      <p>IT Systems & Cybersecurity Specialist with hands-on experience in enterprise IT support, network infrastructure, Microsoft 365 administration, endpoint protection (Kaspersky, Sophos), vulnerability assessments and secure LAN/WLAN design.</p>
-      <p>Based in Kampala, Uganda — passionate about helping businesses and organizations build reliable, secure and future-ready technology environments.</p>
+
+  <div class="about-container">
+    <!-- Left: Circular image with tech overlay -->
+    <div class="about-image-wrapper">
+      <div class="about-image-circle">
+        <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru" class="about-image"/>
+      </div>
+      <div class="tech-overlay"></div>
     </div>
-    <img src="wanjeru.jpg" alt="Marc Wanjeru professional portrait"/>
+
+    <!-- Right: Text content -->
+    <div class="about-text">
+      <p><strong>IT Systems & Cybersecurity Specialist</strong> with hands-on experience in enterprise IT support, network infrastructure, Microsoft 365 administration, endpoint protection (Kaspersky, Sophos), vulnerability assessments and secure LAN/WLAN design.</p>
+      <p>Based in <strong>Kampala, Uganda</strong> — passionate about helping businesses and organizations build reliable, secure and future-ready technology environments.</p>
+      <p>Currently focused on advanced infrastructure projects, security hardening, cloud integration and proactive threat mitigation for clients across various sectors.</p>
+    </div>
   </div>
 </section>
+
+<script>
+// Navbar scroll shrink
+window.addEventListener('scroll', () => {
+  document.querySelector('.nav-container').classList.toggle('scrolled', window.scrollY > 80);
+});
+</script>
 
 <!-- Journey -->
 <section id="journey">
