--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <style>
     :root {
       --bg: #0a1117;
-      --surface: #111b22;
       --glass: rgba(20, 35, 50, 0.72);
       --border: rgba(255,255,255,0.09);
       --blur: blur(16px);
@@ -21,6 +20,8 @@
       --accent-glow: rgba(0,212,192,0.18);
       --shadow: 0 12px 40px rgba(0,0,0,0.6);
       --radius: 16px;
+      --footer-bg: #0a0f14;
+      --footer-text: #c2d4e0;
     }
 
     * { margin:0; padding:0; box-sizing:border-box; }
@@ -33,13 +34,18 @@
       overflow-x: hidden;
     }
 
-    /* Navbar (kept simple & matching your previous style) */
-    .nav {
+    /* Navbar */
+    .nav-container {
       position: fixed;
       top: 16px; left: 50%;
       transform: translateX(-50%);
       z-index: 1000;
       width: 94%; max-width: 1240px;
+      transition: all 0.4s ease;
+    }
+    .nav-container.scrolled { top: 8px; width: 90%; max-width: 1180px; }
+
+    nav {
       height: 68px;
       background: var(--glass);
       backdrop-filter: var(--blur);
@@ -49,10 +55,8 @@
       display: flex;
       align-items: center;
       padding: 0 24px;
-      transition: all 0.4s;
+      gap: 16px;
     }
-
-    .nav.scrolled { top: 8px; width: 90%; max-width: 1180px; }
 
     .nav-links {
       display: flex;
@@ -86,39 +90,100 @@
 
     .nav-cta:hover { background: #00a894; }
 
-    /* ── About Section ── */
-    #about {
-      padding: 140px 5% 100px;
-      max-width: 1400px;
-      margin: 0 auto;
-      position: relative;
-    }
-
-    #about h2 {
-      font-size: 3.6rem;
+    /* Hero */
+    #home {
+      height: 100vh;
+      min-height: 720px;
+      background: linear-gradient(rgba(10,20,26,0.82), rgba(10,20,26,0.88)),
+                  url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover fixed;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       text-align: center;
-      color: var(--accent);
-      margin-bottom: 4rem;
-      font-weight: 700;
-      letter-spacing: -1px;
     }
 
-    .about-container {
+    .hero-box {
+      max-width: 960px;
+      padding: 48px 32px;
+      background: rgba(15,30,45,0.62);
+      backdrop-filter: blur(16px);
+      border-radius: 28px;
+      border: 1px solid rgba(255,255,255,0.07);
+      box-shadow: 0 24px 64px rgba(0,0,0,0.6);
+    }
+
+    .hero-box h1:first-child { font-size: 3.8rem; margin-bottom: 0.4rem; font-weight: 800; }
+    .hero-box h1:last-child  { font-size: 5.4rem; line-height: 0.95; margin: 0.3rem 0 1.5rem; font-weight: 900; }
+    .hero-box h1 span { color: var(--accent); }
+    .hero-box p { font-size: 1.55rem; opacity: 0.92; margin-bottom: 2.8rem; }
+
+    .hero-buttons {
+      display: flex;
+      gap: 1.6rem;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .btn {
+      padding: 16px 48px;
+      font-size: 1.15rem;
+      font-weight: 600;
+      border-radius: 999px;
+      text-decoration: none;
+      transition: all 0.3s ease;
+    }
+
+    .btn-primary { background: var(--accent); color: #000; }
+    .btn-primary:hover { background: #00a894; transform: translateY(-3px); box-shadow: 0 12px 32px rgba(0,201,177,0.35); }
+    .btn-outline { background: transparent; border: 2px solid white; color: white; }
+    .btn-outline:hover { background: rgba(255,255,255,0.12); transform: translateY(-3px); }
+
+    /* Sections */
+    section { padding: 140px 5% 100px; max-width: 1400px; margin: 0 auto; }
+    h2 { font-size: 3.2rem; text-align: center; color: var(--accent); margin-bottom: 3.5rem; font-weight: 700; }
+
+    .card-grid {
+      display: flex;
+      overflow-x: auto;
+      gap: 32px;
+      padding: 12px 0;
+      scroll-snap-type: x mandatory;
+      -webkit-overflow-scrolling: touch;
+      scrollbar-width: none;
+    }
+
+    .card-grid::-webkit-scrollbar { display: none; }
+
+    .card {
+      flex: 0 0 360px;
+      scroll-snap-align: start;
+      background: var(--glass);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 32px;
+      box-shadow: var(--shadow);
+      transition: transform 0.4s;
+    }
+
+    .card:hover { transform: translateY(-12px); }
+
+    /* About */
+    #about .about-container {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 80px;
       align-items: center;
     }
 
-    /* Left: Circular framed image with tech overlay */
-    .about-image-wrapper {
+    #about .about-image-wrapper {
       position: relative;
       width: 100%;
       max-width: 460px;
       margin: 0 auto;
     }
 
-    .about-image-circle {
+    #about .about-image-circle {
       width: 100%;
       aspect-ratio: 1 / 1;
       border-radius: 50%;
@@ -129,15 +194,13 @@
       background: radial-gradient(circle at 30% 30%, rgba(0,212,192,0.12), transparent 60%);
     }
 
-    .about-image {
+    #about img {
       width: 100%;
       height: 100%;
       object-fit: cover;
-      display: block;
     }
 
-    /* Floating tech infographic overlay */
-    .tech-overlay {
+    #about .tech-overlay {
       position: absolute;
       inset: -20%;
       pointer-events: none;
@@ -157,34 +220,250 @@
       100% { transform: translate(0, 0) rotate(0deg); }
     }
 
-    /* Right: Text content */
-    .about-text {
+    #about .about-text {
       font-size: 1.18rem;
       color: var(--muted);
-      max-width: 580px;
     }
 
-    .about-text strong {
+    #about .about-text strong {
       color: var(--text);
       font-weight: 600;
     }
 
-    .about-text p {
+    #about .about-text p {
       margin-bottom: 1.6rem;
     }
 
+    /* Contact */
+    #contact .contact-wrapper {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 80px;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    #contact .contact-left {
+      display: flex;
+      flex-direction: column;
+      gap: 32px;
+    }
+
+    #contact .contact-toggle {
+      width: 48px;
+      height: 48px;
+      background: var(--accent);
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.4rem;
+      color: #000;
+      box-shadow: 0 4px 16px rgba(0,212,192,0.35);
+      align-self: flex-start;
+    }
+
+    #contact .contact-left h2 {
+      font-size: 3.6rem;
+      margin-bottom: 1rem;
+    }
+
+    #contact .contact-cards {
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+    }
+
+    #contact .contact-card {
+      background: var(--glass);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 24px;
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      transition: all 0.3s;
+    }
+
+    #contact .contact-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 16px 40px rgba(0,0,0,0.5);
+    }
+
+    #contact .contact-icon {
+      width: 56px;
+      height: 56px;
+      background: rgba(0,212,192,0.15);
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.8rem;
+      color: var(--accent);
+    }
+
+    #contact .contact-info strong {
+      display: block;
+      font-size: 1.15rem;
+      margin-bottom: 0.3rem;
+    }
+
+    #contact .contact-info a {
+      color: var(--text);
+      text-decoration: none;
+    }
+
+    #contact .contact-info a:hover {
+      color: var(--accent);
+    }
+
+    #contact .arrow {
+      font-size: 1.4rem;
+      color: var(--muted);
+      transition: all 0.3s;
+    }
+
+    #contact .contact-card:hover .arrow {
+      color: var(--accent);
+      transform: translateX(6px);
+    }
+
+    #contact .contact-form {
+      background: var(--glass);
+      backdrop-filter: var(--blur);
+      border: 1px solid var(--border);
+      border-radius: var(--radius);
+      padding: 40px;
+    }
+
+    #contact .contact-form label {
+      display: block;
+      margin-bottom: 0.6rem;
+      color: var(--muted);
+      font-size: 0.95rem;
+    }
+
+    #contact .contact-form input,
+    #contact .contact-form textarea {
+      width: 100%;
+      padding: 14px 18px;
+      margin-bottom: 1.5rem;
+      background: rgba(255,255,255,0.04);
+      border: 1px solid rgba(255,255,255,0.12);
+      border-radius: 12px;
+      color: var(--text);
+      font-size: 1.05rem;
+    }
+
+    #contact .contact-form input:focus,
+    #contact .contact-form textarea:focus {
+      outline: none;
+      border-color: var(--accent);
+      box-shadow: 0 0 0 3px rgba(0,212,192,0.15);
+    }
+
+    #contact .contact-form textarea {
+      min-height: 160px;
+      resize: vertical;
+    }
+
+    #contact .contact-form button {
+      width: 100%;
+      padding: 18px;
+      background: var(--accent);
+      color: #000;
+      font-size: 1.15rem;
+      font-weight: 600;
+      border: none;
+      border-radius: 999px;
+      cursor: pointer;
+      transition: all 0.3s;
+    }
+
+    #contact .contact-form button:hover {
+      background: #00a894;
+      transform: translateY(-2px);
+    }
+
+    /* ── Minimal Footer ── */
+    footer {
+      background: var(--footer-bg);
+      color: var(--footer-text);
+      padding: 60px 5% 40px;
+      text-align: center;
+      border-top: 1px solid rgba(255,255,255,0.06);
+    }
+
+    .footer-content {
+      max-width: 800px;
+      margin: 0 auto;
+      font-size: 0.95rem;
+    }
+
+    .footer-name {
+      font-size: 1.3rem;
+      color: var(--accent);
+      margin-bottom: 0.8rem;
+      font-weight: 600;
+    }
+
+    .footer-links {
+      margin: 1.2rem 0;
+    }
+
+    .footer-links a {
+      color: var(--muted);
+      text-decoration: none;
+      margin: 0 1rem;
+      transition: color 0.3s;
+    }
+
+    .footer-links a:hover {
+      color: var(--accent);
+      text-decoration: underline;
+    }
+
+    .footer-copyright {
+      font-size: 0.9rem;
+      opacity: 0.8;
+      margin-top: 1.5rem;
+    }
+
+    /* WhatsApp */
+    .whatsapp {
+      position: fixed;
+      bottom: 32px;
+      right: 32px;
+      background: #25D366;
+      color: white;
+      width: 68px;
+      height: 68px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 2.4rem;
+      box-shadow: 0 12px 36px rgba(0,0,0,0.5);
+      z-index: 999;
+      transition: transform 0.3s;
+    }
+
+    .whatsapp:hover { transform: scale(1.15); }
+
     /* Responsive */
     @media (max-width: 960px) {
-      .about-container {
+      .about-container,
+      .contact-wrapper {
         grid-template-columns: 1fr;
-        text-align: center;
       }
-      .about-image-wrapper { max-width: 380px; }
-      .about-text { max-width: 100%; }
+      .contact-left { text-align: center; }
+      .contact-toggle { align-self: center; }
     }
 
     @media (max-width: 640px) {
-      #about h2 { font-size: 2.8rem; }
+      footer { padding: 50px 5% 30px; }
+      .footer-links a { display: block; margin: 0.8rem 0; }
     }
   </style>
 </head>
@@ -192,7 +471,7 @@
 
 <!-- Navigation -->
 <div class="nav-container" id="nav">
-  <nav class="nav">
+  <nav>
     <div class="nav-links">
       <a href="#home">Home</a>
       <a href="#about">About</a>
@@ -205,7 +484,7 @@
   </nav>
 </div>
 
-<!-- Hero (kept simple from your previous versions) -->
+<!-- Hero -->
 <section id="home" style="height:100vh; background:linear-gradient(rgba(10,20,26,0.82),rgba(10,20,26,0.88)), url('https://images.unsplash.com/photo-1558494949-ef0d7b9d4d29?w=2400&auto=format&fit=crop&q=90') center/cover fixed; display:flex; align-items:center; justify-content:center; text-align:center;">
   <div style="max-width:960px; padding:48px 32px; background:rgba(15,30,45,0.62); backdrop-filter:blur(16px); border-radius:28px; border:1px solid rgba(255,255,255,0.07); box-shadow:0 24px 64px rgba(0,0,0,0.6);">
     <h1 style="font-size:3.8rem; margin-bottom:0.4rem; font-weight:800;">Hi There!</h1>
@@ -218,20 +497,16 @@
   </div>
 </section>
 
-<!-- About Me – updated layout -->
+<!-- About -->
 <section id="about">
   <h2>About Me</h2>
-
   <div class="about-container">
-    <!-- Left: Circular image with tech overlay -->
     <div class="about-image-wrapper">
       <div class="about-image-circle">
         <img src="https://images.unsplash.com/photo-1556155099-490a1ba16284?w=800&auto=format&fit=crop&q=80" alt="Marc Wanjeru" class="about-image"/>
       </div>
       <div class="tech-overlay"></div>
     </div>
-
-    <!-- Right: Text content -->
     <div class="about-text">
       <p><strong>IT Systems & Cybersecurity Specialist</strong> with hands-on experience in enterprise IT support, network infrastructure, Microsoft 365 administration, endpoint protection (Kaspersky, Sophos), vulnerability assessments and secure LAN/WLAN design.</p>
       <p>Based in <strong>Kampala, Uganda</strong> — passionate about helping businesses and organizations build reliable, secure and future-ready technology environments.</p>
@@ -240,64 +515,7 @@
   </div>
 </section>
 
-<script>
-// Navbar scroll shrink
-window.addEventListener('scroll', () => {
-  document.querySelector('.nav-container').classList.toggle('scrolled', window.scrollY > 80);
-});
-</script>
-
-<!-- Journey -->
-<section id="journey">
-  <h2>Professional Journey</h2>
-  <div class="card-grid">
-    <div class="card">
-      <h3>2024 – Present</h3>
-      <h4>Senior IT Systems & Security Specialist</h4>
-      <p>Leading infrastructure projects, Kaspersky & Sophos endpoint deployments, secure network design and incident response in Kampala enterprises.</p>
-    </div>
-    <div class="card">
-      <h3>2022 – 2024</h3>
-      <h4>Systems Administrator – NGO</h4>
-      <p>Managed Microsoft 365 environments, user permissions, collaboration tools and critical system uptime for humanitarian operations.</p>
-    </div>
-    <div class="card">
-      <h3>2020 – 2022</h3>
-      <h4>IT Support Specialist</h4>
-      <p>Provided hands-on support, endpoint management, basic network troubleshooting and software deployments for 200+ users daily.</p>
-    </div>
-    <div class="card">
-      <h3>2018 – 2020</h3>
-      <h4>Junior Network Engineer</h4>
-      <p>Assisted in LAN/WLAN setup, connectivity troubleshooting and basic security protocol implementation.</p>
-    </div>
-  </div>
-</section>
-
-<!-- Services -->
-<section id="services">
-  <h2>Services I Offer</h2>
-  <div class="card-grid">
-    <div class="card">
-      <h3>IT Consultation</h3>
-      <p>Technology strategy, cloud migration planning, infrastructure architecture advice.</p>
-    </div>
-    <div class="card">
-      <h3>Network Design & Security</h3>
-      <p>Secure LAN/WLAN deployment, firewall & VPN configuration, endpoint protection.</p>
-    </div>
-    <div class="card">
-      <h3>Microsoft 365 Administration</h3>
-      <p>Tenant setup, user & group management, Exchange Online, Teams, security & compliance.</p>
-    </div>
-    <div class="card">
-      <h3>Cybersecurity Services</h3>
-      <p>Vulnerability scanning, Kaspersky/Sophos deployment, security audits, incident response planning.</p>
-    </div>
-  </div>
-</section>
-
-<!-- Contact – your requested design -->
+<!-- Contact -->
 <section id="contact">
   <div class="contact-wrapper">
     <div class="contact-left">
@@ -350,40 +568,17 @@ window.addEventListener('scroll', () => {
   </div>
 </section>
 
-<!-- Footer -->
+<!-- Minimal Footer -->
 <footer>
-  <div class="footer-grid">
-    <div class="footer-brand">
-      <h3>Marc Wanjeru</h3>
-      <p>IT Systems & Cybersecurity Specialist<br>Kampala, Uganda</p>
+  <div class="footer-content">
+    <div class="footer-name">Marc Wanjeru</div>
+    <div class="footer-links">
+      <a href="https://linkedin.com/in/marc-wanjeru" target="_blank">LinkedIn</a>
+      <a href="https://github.com/marc-wanjeru" target="_blank">GitHub</a>
     </div>
-
-    <div>
-      <h4>Quick Links</h4>
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#contact">Contact</a>
+    <div class="footer-copyright">
+      © 2026 • Kampala, Uganda
     </div>
-
-    <div>
-      <h4>Contact</h4>
-      <p>+256 769 593 704</p>
-      <p>wanjerumarc@icloud.com</p>
-      <p>Kampala, Uganda</p>
-    </div>
-
-    <div>
-      <h4>Availability</h4>
-      <p>Mon–Thu: 9:00 – 18:00</p>
-      <p>Fri: 9:00 – 17:00</p>
-      <p>Sat: By appointment</p>
-      <p>Sun: Closed</p>
-    </div>
-  </div>
-
-  <div class="copyright">
-    © 2026 Marc Wanjeru. Built in Kampala.
   </div>
 </footer>
 
@@ -391,10 +586,10 @@ window.addEventListener('scroll', () => {
 <a href="https://wa.me/256769593704?text=Hi%20Marc%2C%20I%20would%20like%20to%20discuss..." class="whatsapp" target="_blank">💬</a>
 
 <script>
-  // Navbar scroll effect
-  window.addEventListener('scroll', () => {
-    document.querySelector('.nav-container').classList.toggle('scrolled', window.scrollY > 80);
-  });
+// Navbar scroll effect
+window.addEventListener('scroll', () => {
+  document.querySelector('.nav-container').classList.toggle('scrolled', window.scrollY > 80);
+});
 </script>
 
 </body>
